[package]
name = "rust-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
# wgpu:
cfg-if = "1"
winit = "0.28"
env_logger = "0.10"
wgpu = "0.16"
pollster = "0.3"

[[bin]]
name = "wgpu-window"
path = "./src/graphic/wgpu/1.window.rs"

[[bin]]
name = "wgpu-surface"
path = "./src/graphic/wgpu/2.surface.rs"

[[bin]]
name = "wgpu-pipeline"
path = "./src/graphic/wgpu/3.pipeline.rs"