[workspace]
members = ["async-runtime", "architect/plugin-system", "challenge/dist-sys", "data-structures/wheel-timer"]

[package]
name = "rust-experiments"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
plugin-system = { path = "architect/plugin-system" }

[workspace.dependencies]
async-runtime = { path = "async-runtime" }
