[package]
name = "dist-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-runtime = { workspace = true }
crossbeam-channel = "0.5.10"
futures = "0.3.29"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.108"
